# IndustrialCV

./: LICENSE  README.md  pyproject.toml  setup.py
data/preprocessed/: README.dataset.txt  README.roboflow.txt  data.yaml
data/preprocessed/test/labels/: IMG_20241217_153852_jpg.rf.50435d3ce7f570e46dad73701b4b3477.txt  IMG_20241217_153852_jpg.rf.7628ea31fcbd625e6ddafefc72e7902a.txt  IMG_20241217_153852_jpg.rf.c8ce3f05a7a6dcbfa3c6a42011b00930.txt  IMG_20241217_153852_jpg.rf.ca10e5c102c3e720d216027054ae04c3.txt  IMG_20241217_153909_1_jpg.rf.2ab479678a50b45db67ffdfa49ddc13b.txt  IMG_20241217_153909_1_jpg.rf.40fc0174da94db93445d5c048f4f7740.txt  IMG_20241217_153909_1_jpg.rf.4f41f0a855babec6db78a82ddea83ee3.txt  IMG_20241217_153909_1_jpg.rf.e7716cfb8d95cab4a7b1cddbcd9a194b.txt  IMG_20241217_153918_jpg.rf.543f82ce36e5af8e20fede50e6b6f4ba.txt  IMG_20241217_153918_jpg.rf.6840ddac3c53aa0fc05dfeb756bc66b8.txt  IMG_20241217_153921_jpg.rf.1de41c85f45acbc962bc88ec3afdd76f.txt  IMG_20241217_153921_jpg.rf.285c9df08beab726fcd9305dcbd1b151.txt  IMG_20241217_153921_jpg.rf.4adfdea0ae03e7876145ed2d44622d02.txt  IMG_20241217_153921_jpg.rf.86145fc206740e309551f9489bba3c3f.txt  IMG_20241217_153942_jpg.rf.1aed38a97de6981d808899edf2b0b630.txt  IMG_20241217_153942_jpg.rf.515448c2043f23656e21b7cfeba63401.txt  IMG_20241217_153942_jpg.rf.c631e287256462ffe9484d77c42af7a0.txt  IMG_20241217_153942_jpg.rf.e75407b84bfd677aa11489c99f98d3cb.txt  (+153 more)
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: cv1.0-modelos-entrenamiento.ipynb  miguel.ipynb
src/: main.py
(+3361 files in other folders)
