[project]
name = "industrial-cv"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel Balderrama",email = "miguel.balderr@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ultralytics (>=8.3.62,<9.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
